@@ -1,3 +1,7 @@
+2009-07-23  Yavor Doganov  <yavor@gnu.org>
+
+	* nsfont.m (NSFontDescriptor.h): Explicitly include under GNUstep.
+
 2009-07-23  Adrian Robert  <Adrian.B.Robert@gmail.com>
 
 	* nsterm.m (EmacsView-keyUp:): Only act when running under Tiger.
